--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ Temporary Items
 # End of https://www.toptal.com/developers/gitignore/api/macos
 /build/
 /target/
+.settings/
+.project
+.classpath
