--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,19 @@
 	    <artifactId>mybatis-spring</artifactId>
 	    <version>2.0.6</version>
 	</dependency>	
+	
+	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>mail</artifactId>
+	    <version>1.4.7</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context-support</artifactId>
+	    <version>5.2.0.RELEASE</version>
+	</dependency>			
   </dependencies>
   <!-- 메이븐 마지막 줄-->
 </project>
