--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -21,7 +21,9 @@
     	<init-param>
     		<param-name>contextConfigLocation</param-name>
     		<param-value>
+    			/WEB-INF/controller/oracle/oracleDB-servlet.xml
     			/WEB-INF/controller/test-servlet.xml
+    			/WEB-INF/controller/petitioner-servlet.xml    			
     		</param-value>
     	</init-param>
     </servlet>
