--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,6 +22,7 @@
     		<param-name>contextConfigLocation</param-name>
     		<param-value>
     			/WEB-INF/controller/test-servlet.xml
+    			/WEB-INF/controller/oracle/oracleDB-servlet.xml
     		</param-value>
     	</init-param>
     </servlet>
