--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,26 @@
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-context-support</artifactId>
 	    <version>5.2.0.RELEASE</version>
-	</dependency>			
+	</dependency>
+
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-core</artifactId>
+		<version>2.9.9</version>
+	</dependency>	
+
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-annotations</artifactId>
+		<version>2.9.9</version>
+	</dependency>
+
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.9.9</version>
+	</dependency>
+			
   </dependencies>
   <!-- 메이븐 마지막 줄-->
 </project>
