--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -27,6 +27,7 @@
     			/WEB-INF/controller/test-servlet.xml			
     		</param-value>
     	</init-param>
+    	  <async-supported>true</async-supported> <!-- 웹소켓을 위한 설정(비동기지원) -->
     </servlet>
     
     <servlet-mapping>
