--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,16 @@
 	    <artifactId>aspectjrt</artifactId>
 	    <version>1.9.6</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-websocket</artifactId>
+	    <version>5.3.3</version>
+	</dependency>
+
+		
+	
   </dependencies>
   <!-- 메이븐 마지막 줄-->
 </project>
