--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,11 @@
 	    <version>5.3.3</version>
 	</dependency>
 
-		
+	<dependency>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-resources-plugin</artifactId>
+	    <version>2.4.3</version>
+	</dependency>	
 	
   </dependencies>
   <!-- 메이븐 마지막 줄-->
